--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,104 @@
 /* Write your CSS here! */
+
+
+h1 {
+    color:green;
+    font-size: 50px;
+    margin: 25px;
+    font-family: Copperplate, Papyrus, fantasy;
+   }
+
+h2{
+    margin: 25px 0 0 0;
+  }
+
+
+  img {
+    float: right;
+  }
+
+  p {
+    font-size: 25px;
+    line-height: 25px;
+    margin: 25px;
+    font-family: "Times New Roman", Times, serif;
+  }
+
+.center{
+    text-align:center;
+}
+
+header { 
+    display: block;
+    font-size: 0.5px;
+  }
+
+footer { 
+    display: block;
+  }
+  
+
+  * {
+    box-sizing: border-box;
+    margin: 0;
+  }
+  
+  body {
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(221, 239, 255);
+    display: grid;
+    place-items: center;
+    font-family: cursive;
+    font-weight: bold;
+  }
+  
+  h3 {
+    position: absolute;
+    text-align: center;
+    top: 0,5px;
+  }
+  
+  /* Main Style Stars from here  */
+  .flag {
+    position: relative;
+    width: 300px;
+    height: 200px;
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.5);
+    overflow: hidden;
+  }
+  
+  .jamaica {
+    background: #007848;
+  }
+  
+  .jamaica__left_triangle,
+  .jamaica__right_triangle {
+    position: absolute;
+    border-width: 100px 150px;
+    border-color: transparent transparent transparent #feb916;
+    border-style: solid;
+    transform: scale(1.3);
+    left: 30px;
+  }
+  
+  .jamaica__left_triangle::after,
+  .jamaica__right_triangle::before {
+    position: absolute;
+    content: "";
+    border-width: 65px 100px;
+    border-color: transparent transparent transparent black;
+    border-style: solid;
+    left: -150px;
+    top: -65px;
+  }
+  
+  .jamaica__right_triangle {
+    border-color: transparent #feb916 transparent transparent;
+    left: -30px;
+  }
+  
+  .jamaica__right_triangle::before {
+    border-color: transparent black transparent transparent;
+    left: -50px;
+  }
