--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,15 @@
 /* Write your CSS here! */
 
 
-h1 {
-    color:green;
+#mainHeading{
+    color: red;
     font-size: 50px;
     margin: 25px;
     font-family: Copperplate, Papyrus, fantasy;
-   }
+}  
 
 h2{
     margin: 25px 0 0 0;
-  }
-
-
-  img {
-    float: right;
   }
 
   p {
@@ -22,7 +17,7 @@ h2{
     line-height: 25px;
     margin: 25px;
     font-family: "Times New Roman", Times, serif;
-  }
+  } 
 
 .center{
     text-align:center;
@@ -37,22 +32,6 @@ footer {
     display: block;
   }
   
- /* Three image containers (use 25% for four, and 50% for two, etc) */
-.column {
-  float: left;
-  width: 33.33%;
-  padding: 5px;
-}
-
-/* Clear floats after image containers */
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-
-
 
   * {
     box-sizing: border-box;
@@ -74,6 +53,20 @@ footer {
     text-align: center;
     top: 0,5px;
   }
+
+  /* Three image containers (use 25% for four, and 50% for two, etc) */
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
   
   /* Main Style Stars from here  */
   .flag {
