--- a/styles.css
+++ b/styles.css
@@ -54,12 +54,23 @@ footer {
     top: 0,5px;
   }
 
+  .text {
+    margin-top: 150px;
+    margin-bottom: 100px;
+    margin-right: 60px;
+    margin-left: 15cm;
+    
+    
+  } 
+
+
   /* Three image containers (use 25% for four, and 50% for two, etc) */
 .column {
   float: left;
   width: 33.33%;
   padding: 5px;
 }
+
 
 /* Clear floats after image containers */
 .row::after {
