--- a/styles.css
+++ b/styles.css
@@ -26,12 +26,20 @@ h2{
 header { 
     display: block;
     font-size: 0.5px;
+    text-align: center;
   }
 
 footer { 
     display: block;
   }
   
+/* Requirement number 3 */  
+.fun-Paragraph{
+  color: green;
+}  
+#testP{
+  color:green ;
+}
 
   * {
     box-sizing: border-box;
