--- a/styles.css
+++ b/styles.css
@@ -50,10 +50,11 @@ body{
     width: 100%;
     height: 100vh;
     background-color: rgb(221, 239, 255);
-    display: grid;
+    display: block;
     place-items: center;
     font-family: cursive;
     font-weight: bold;
+    margin: 8px;
   }
   
 h3{
